# TagSearchWeb

./: CMakeLists.txt  README.md  httplib.h  index.html  main.cpp  tag.txt
data/: all_tags_ja.csv  all_tags_translated_250722.csv  tag_statistics_250807.csv
